added javafx installation